Translating english to indo

--- a/about.html
+++ b/about.html
@@ -17,17 +17,14 @@
         <div class="nav-links">
           <a href="index.html">HOME</a>
           <a href="about.html">ABOUT YOU</a>
-          <a href="#">PORTFOLIOS</a>
-          <a href="#">CONTACT US</a>
-        </div>
-        <div class="search-icon">
-          <i class="fas fa-search"></i>
+          <a href="moments.html">MOMENTS OF YOU</a>
+          <a href="wishes.html">MY WISHES</a>
         </div>
       </nav>
 
       <div class="content-wrapper">
         <aside class="sidebar">
-          <div class="vertical-text">BIODATA</div>
+          <div class="vertical-text">ABOUT</div>
         </aside>
 
         <main class="main-content">
@@ -38,7 +35,7 @@
 
           <p class="intro-text">
             This page is dedicated to celebrating the amazing person you are.
-            Here's a peek at the wonder of you!!
+            Here's a peek at the wonder of you.
           </p>
 
           <div class="biodata-section">
@@ -46,7 +43,10 @@
               <h3 class="data-heading">Personal Snapshot</h3>
               <p><strong>Name:</strong> Clarissa Maramis (ICA)</p>
               <p><strong>Birthday:</strong> 26-11-2005</p>
-              <p><strong>Life Motto:</strong> "TBA"</p>
+              <p>
+                <strong>The Magic She Carries:</strong> Turning your whole day
+                upside dowwn through literally ANYTHING that she does
+              </p>
             </div>
 
             <div class="data-block fun-facts">
@@ -78,23 +78,31 @@
 
             <div class="page-indicator" style="margin-top: 50px">
               <hr />
-              <p>02/06</p>
+              <p>02/04</p>
             </div>
           </div>
         </main>
 
-        <div class="santa-image">
-          <img
-            src="santa.png"
-            alt="A photo of the sweet angel"
-            class="santa-placeholder"
-          />
-          <p class="santa-label" style="color: var(--text-dark)">
-            Truly the best gift.
-          </p>
+        <div class="ornament-container">
+          <div class="tree-wrapper">
+            <i class="fas fa-tree"></i>
+            <i class="fas fa-star star-decoration s1"></i>
+            <i class="fas fa-star star-decoration s2"></i>
+            <i class="fas fa-star star-decoration s3"></i>
+            <i class="fas fa-star star-decoration s4"></i>
+            <i class="fas fa-star star-decoration s5"></i>
+            <i class="fas fa-star star-decoration s6"></i>
+          </div>
+          <p class="ornament-quote">"The brightest light in every room."</p>
         </div>
       </div>
     </div>
+    <audio
+      id="bgMusic"
+      loop
+      autoplay
+      src="ASSETS/Elvis Presley - Take My Hand Precious Lord (Official Audio).mp3"
+    ></audio>
     <script src="script.js"></script>
   </body>
 </html>
