--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="index.html">HOME</a>
           <a href="about.html">ABOUT YOU</a>
           <a href="moments.html">MOMENTS OF YOU</a>
-          <a href="wishes.html">MY WISHES</a>
+          <a href="wishes.html">MY WISH</a>
         </div>
       </nav>
 
